--- a/client/src/Loader/Loader.css
+++ b/client/src/Loader/Loader.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    --app_bg: rgba(0, 0, 0, 0.5);
 }
 
 .app {
@@ -10,7 +11,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    background: var(--app_bg);
     z-index: 1000;
     display: none;
 }
